--- a/bm/views/main.xml
+++ b/bm/views/main.xml
@@ -348,8 +348,10 @@
                     <field name="contract_id"/>
                     <field name="project_id"/>
                     <field name="partner_id"/>
-                    <field name="currency_id"/>
-                    <field name="spj_id"/>
+                    <field name="currency_id" invisible="1"/>
+                    <field name="amount"/>
+                    <field name="amount_labor_cost"/>
+                    <field name="amount_mech_cost"/>
                 </tree>
             </field>
         </record>
